<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:src="@drawable/ic_amz_com_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/squared_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/e_create_account"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/name"
            android:text="@string/e_your_name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/id"
            android:text="@string/e_mobile_number_or_email" />

        <EditText
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/password"
            android:text="@string/e_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/e_at_least_six_characters"
            android:imeOptions="actionNext"
            android:inputType="text|textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/re_password"
            android:text="@string/e_re_enter_password" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:imeOptions="actionNext"
            android:inputType="text|textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/e_primary_bg"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/e_continue"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>