<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:src="@drawable/ic_amz_com_logo" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/e_sign_in"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:background="@drawable/squared_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/e_email"
            android:inputType="text|textEmailAddress"
            android:paddingHorizontal="4dp" />

        <View
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EBEAEB" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/e_password"
            android:inputType="textPassword"
            android:paddingHorizontal="4dp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/e_show_password"
        tools:checked="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/e_primary_bg"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/e_sign_in"
        android:textAllCaps="false"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:background="#E5E5E5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#FFFFFF"
            android:paddingHorizontal="8dp"
            android:text="@string/e_new_to_amazon" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/e_secondary_bg"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="12dp"
        android:text="@string/e_create_a_new_amazon_account"
        android:textAllCaps="false" />

</LinearLayout>